@@ -47,9 +47,9 @@ PURE_STACK: Maximum stack size in kilobytes (default: 0 = unlimited).\n"
 #define LICENSE "This program is free software distributed under the GNU Public License\n(GPL V3 or later). Please see the COPYING file for details.\n"
 
 static const char *commands[] = {
-  "cd", "clear", "extern", "help", "infix", "infixl", "infixr", "let", "list",
-  "ls", "nullary", "override", "postfix", "prefix", "pwd", "quit", "run",
-  "save", "stats", "underride", "using", 0
+  "cd", "clear", "def", "extern", "help", "infix", "infixl", "infixr", "let",
+  "list", "ls", "nullary", "override", "postfix", "prefix", "pwd", "quit",
+  "run", "save", "stats", "underride", "using", 0
 };
 
 /* Generator functions for command completion. */
